<resources>
    <string name="app_name">MyStory.</string>

    <string name="register">Register</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="fill_field">Please fill every field</string>
    <string name="wrong_credential">Wrong email or password</string>

    <string name="have_account">Already have an account?</string>
    <string name="to_login">Login here</string>

    <string name="no_account">Don\'t have an account?</string>
    <string name="to_register">Register here</string>
    <string name="logout">Logout</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Register failed</string>

    <string name="photo_story_card">Story photo</string>
    <string name="story_desc">Story description</string>
    <string name="story_created_at">created at %s</string>
    <string name="add_story_hint_desc">Enter description</string>
    <string name="add_story_photo">Story photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="btn_camera">Camera button</string>
    <string name="btn_switch_camera">Change camera button</string>
    <string name="add_story">Add story button</string>
    <string name="send_story">Send</string>
    <string name="language_settings">Set language</string>
    <string name="select_language">Pilih bahasa</string>
    <string name="settings">Settings</string>

    <string name="error_password">Password length must be more than 8 character</string>
    <string name="error_email">Invalid email format</string>
    <string name="error_upload">Failed to upload story</string>
    <string name="error_no_permission">Permission not granted</string>
    <string name="error_no_photo">Please add your photo</string>
    <string name="error_no_desc">Please add your description</string>

    <string name="title_settings">Settings</string>
    <string name="title_detail">Detail Story</string>
    <string name="title_add_story">Add Story</string>
    <string name="add_your_story">Add Your Story</string>

    <string name="retry">Reload</string>
    <string name="failed_load_data">Failed to load data</string>
    <string name="title_activity_maps">Map View</string>

    <string name="cb_share_location">Share my location</string>
    <string name="map_view">Map View</string>
    <string name="map_style">Map Style</string>
    <string name="map_type">Map Type</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_style_normal">Normal</string>
    <string name="map_style_silver">Silver</string>
    <string name="map_style_night">Night</string>

</resources>