<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailstory.DetailStoryActivity">

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/photo_story_card"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_detail_name"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo" />

    <TextView
        android:id="@+id/tv_detail_description"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:text="@string/story_desc"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_desc" />

    <TextView
        android:id="@+id/tv_create_desc"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:text="@string/story_created_at"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/iv_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:ignore="SmallSp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>