<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp"
    tools:context=".ui.map.mapstyle.MapStyleFragment">


    <View
        android:id="@+id/bottom_sheet_toggle"
        android:layout_width="30dp"
        android:layout_height="5dp"
        android:alpha="0.3"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/tv_map_type"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_toggle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_map_default"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="13dp"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_map_type">

        <ImageView
            android:id="@+id/iv_map_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:contentDescription="@string/map_type_normal"
            android:src="@drawable/ic_map_default" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_map_satellite"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="13dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_map_type">

        <ImageView
            android:id="@+id/iv_map_satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:contentDescription="@string/map_type_satellite"
            android:src="@drawable/ic_map_satellite" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_map_terrain"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="13dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_map_type">

        <ImageView
            android:id="@+id/iv_map_terrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:contentDescription="@string/map_type_terrain"
            android:src="@drawable/ic_map_terrain" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_map_default"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_type_normal"
        app:layout_constraintEnd_toEndOf="@+id/cv_map_default"
        app:layout_constraintStart_toStartOf="@+id/cv_map_default"
        app:layout_constraintTop_toBottomOf="@+id/cv_map_default" />

    <TextView
        android:id="@+id/tv_map_satellite"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_type_satellite"
        app:layout_constraintEnd_toEndOf="@+id/cv_map_satellite"
        app:layout_constraintStart_toStartOf="@+id/cv_map_satellite"
        app:layout_constraintTop_toBottomOf="@+id/cv_map_satellite" />

    <TextView
        android:id="@+id/tv_map_terrain"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_type_terrain"
        app:layout_constraintEnd_toEndOf="@+id/cv_map_terrain"
        app:layout_constraintStart_toStartOf="@+id/cv_map_terrain"
        app:layout_constraintTop_toBottomOf="@+id/cv_map_terrain" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="192dp"
        android:alpha="0.3"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_map_style"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/map_style"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_map_style_default"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="13dp"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_map_style">

        <ImageView
            android:id="@+id/iv_map_style_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:src="@drawable/ic_map_default"
            android:contentDescription="@string/map_style_normal"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_map_style_night"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="13dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_map_style">

        <ImageView
            android:contentDescription="@string/map_style_night"
            android:id="@+id/iv_map_style_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:src="@drawable/ic_map_style_night" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_map_style_silver"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="13dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_map_style">

        <ImageView
            android:id="@+id/iv_map_style_silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:src="@drawable/ic_map_style_silver"
            android:contentDescription="@string/map_style_silver" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_map_style_normal"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_style_normal"
        app:layout_constraintEnd_toEndOf="@+id/cv_map_style_default"
        app:layout_constraintStart_toStartOf="@+id/cv_map_style_default"
        app:layout_constraintTop_toBottomOf="@+id/cv_map_style_default" />

    <TextView
        android:id="@+id/tv_map_style_night"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_style_night"
        app:layout_constraintEnd_toEndOf="@+id/cv_map_style_night"
        app:layout_constraintStart_toStartOf="@+id/cv_map_style_night"
        app:layout_constraintTop_toBottomOf="@+id/cv_map_style_night" />

    <TextView
        android:id="@+id/tv_map_style_silver"
        style="@style/styleTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/map_style_silver"
        app:layout_constraintEnd_toEndOf="@+id/cv_map_style_silver"
        app:layout_constraintStart_toStartOf="@+id/cv_map_style_silver"
        app:layout_constraintTop_toBottomOf="@+id/cv_map_style_silver" />
</androidx.constraintlayout.widget.ConstraintLayout>